# game-of-greed

./: README.md  pyproject.toml
game_of_greed/: banker.py  bots.py  bots.py:Zone.Identifier  game.py  game_logic.py
tests/: test_banker.py
tests/flow/: flo.py
tests/version_1/: test_banker.py  test_roll_dice.py
tests/version_2/: test_bank_first_for_two_rounds.py  test_bank_one_roll_then_quit.py  test_hot_dice.py  test_one_and_done.py  test_quitter.py
tests/version_3/: test_cheat.py  test_zilch.py
